--- a/front-lm/src/app/components/product-form/product-form.component.css
+++ b/front-lm/src/app/components/product-form/product-form.component.css
@@ -1,62 +1,62 @@
 .product-form {
-  height: 100%;
-  width: 300px;
-  border: 1px solid black;
-  border-radius: 10px;
-  padding: 16px;
+    height: 100%;
+    width: 300px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 16px;
 
-  font-family: "Inter";
+    font-family: 'Inter';
 
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
-  font-size: 28px;
-  margin: 0;
-  margin-bottom: 8px;
-  font-weight: 600;
+    font-size: 28px;
+    margin: 0;
+    margin-bottom: 8px;
+    font-weight: 600;
 
-  text-align: center;
+    text-align: center;
 }
 
 input {
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 4px;
-  border-color: black;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 4px;
+    border-color: black;
 
-  padding: 5px;
+    padding: 5px;
 
-  margin: 4px 0 16px;
+    margin: 4px 0 16px;
 }
 
-input[type="number"] {
-  -moz-appearance: textfield;
+input[type='number'] {
+    -moz-appearance: textfield;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .error {
-  color: red;
+    color: red;
 }
 
 button {
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 4px;
-  border-color: black;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 4px;
+    border-color: black;
 
-  padding: 5px;
+    padding: 5px;
 
-  font-family: "Inter";
-  font-size: 14px;
+    font-family: 'Inter';
+    font-size: 14px;
 }
 
 button:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
