--- a/front-lm/src/app/components/product-list/product-list.component.css
+++ b/front-lm/src/app/components/product-list/product-list.component.css
@@ -1,19 +1,19 @@
 .product-list {
-  height: 100%;
-  width: 300px;
-  border: 1px solid black;
-  border-radius: 10px;
-  padding: 16px;
+    height: 100%;
+    width: 300px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 16px;
 
-  font-family: "Inter";
+    font-family: 'Inter';
 
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 h1 {
-  font-size: 28px;
-  margin: 0;
-  margin-bottom: 8px;
-  font-weight: 600;
-  text-align: center;
+    font-size: 28px;
+    margin: 0;
+    margin-bottom: 8px;
+    font-weight: 600;
+    text-align: center;
 }
